--- a/assets/styleLogin.css
+++ b/assets/styleLogin.css
@@ -6,16 +6,29 @@
 body {
     padding: 2rem;
     font-family: 'Nunito', sans-serif;
+    align-items: center;
+}
+
+.login {
+    text-align: center;
+    transition: opacity 300ms linear;
+    font-size: 32px;
+    font-weight: 700;
+
 }
 
 .contenedor {
-    padding: 20px;
-    border: 1px solid #ccc;
+    padding: 241px;
+    border: 1px solid #cccccc;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 /*INPUTS Y ANIMACION*/
 
 .text1 {
+    user-select: none;
     display: grid;
     width: 200px;
     padding: 1.5rem 0;
@@ -27,6 +40,7 @@ body {
 }
 
 .text2 {
+    user-select: none;
     display: grid;
     width: 200px;
     padding: 1.5rem 0;
@@ -48,6 +62,7 @@ body {
 }
 
 .input1 {
+    user-select: none;
     height: 100%;
     border: none;
     outline: none;
@@ -62,6 +77,7 @@ body {
 }
 
 .input2 {
+    user-select: none;
     height: 100%;
     border: none;
     outline: none;
@@ -72,5 +88,75 @@ body {
     &:not(:placeholder-shown)+.span2 {
         color: blueviolet;
         transform: translate(0, -100%) scale(.8);
+    }
+}
+
+/*-----------------*/
+
+.button-container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+}
+
+.button {
+    display: flex;
+    overflow: hidden;
+    padding: 12px 12px;
+    cursor: pointer;
+    user-select: none;
+    transition: all 600ms linear;
+    text-align: center;
+    white-space: nowrap;
+    text-decoration: none !important;
+    text-transform: none;
+    text-transform: capitalize;
+    color: #000000;
+    border: 10 none;
+    border-radius: var(--borderRadius);
+    font-size: 13px;
+    font-weight: 500;
+    line-height: 1.3;
+    
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
+
+    justify-content: center;
+    align-items: center;
+    flex: 0 0 160px;
+
+    box-shadow: 2px 5px 10px var(--color-smoke);
+
+    &:hover {
+        transition: all 150ms linear;
+
+        opacity: .85;
+    }
+
+    &:active {
+        transition: all 150ms linear;
+        opacity: .75;
+    }
+
+    &:focus {
+        outline: 1px dotted #959595;
+        outline-offset: -4px;
+    }
+}
+
+.button.-regular {
+    color: #202129;
+    background-color: #f2f2f2;
+
+    &:hover {
+        color: #202129;
+        background-color: #e1e2e2;
+        opacity: 1;
+    }
+
+    &:active {
+        background-color: #d5d6d6;
+        opacity: 1;
     }
 }
