--- a/assets/styleLogin.css
+++ b/assets/styleLogin.css
@@ -6,28 +6,51 @@
 body {
     padding: 2rem;
     font-family: 'Nunito', sans-serif;
-    align-items: center;
+    background-image: url(./resources/Fondo.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+}
+
+.capa{
+    opacity: 0.7;
 }
 
 .login {
     text-align: center;
-    transition: opacity 300ms linear;
-    font-size: 32px;
-    font-weight: 700;
-
+    font-size: 50px;
 }
 
-.contenedor {
-    padding: 241px;
-    border: 1px solid #cccccc;
+.contenedor{
+    display: grid;
+    place-items: center;
+    height: 90vh;
+}
+
+.card {
+    width: 500px;
+    height: 500px;
+    background-color: rgb(255, 255, 255);
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+    padding: 20px 30px;
+    gap: 13px;
+    position: relative;
+    overflow: hidden;
+    box-shadow: 2px 2px 20px rgba(0, 0, 0, 0.062);
+}
+
+.card{
+    background: linear-gradient(180deg, #feb692 0%, #FFFFFF 30.21%);
+    box-shadow: 0px 187px 75px rgba(0, 0, 0, 0.01), 0px 105px 63px rgba(0, 0, 0, 0.05), 0px 47px 47px rgba(0, 0, 0, 0.09), 0px 12px 26px rgba(0, 0, 0, 0.1), 0px 0px 0px rgba(0, 0, 0, 0.1);
 }
 
 /*INPUTS Y ANIMACION*/
 
 .text1 {
+    color: ;
     user-select: none;
     display: grid;
     width: 200px;
@@ -71,7 +94,7 @@ body {
 
     &:focus+.span1,
     &:not(:placeholder-shown)+.span1 {
-        color: blueviolet;
+        color: rgb(255, 176, 127);
         transform: translate(0, -100%) scale(.8);
     }
 }
@@ -86,77 +109,36 @@ body {
 
     &:focus+.span2,
     &:not(:placeholder-shown)+.span2 {
-        color: blueviolet;
+        color: rgb(255, 176, 127);
         transform: translate(0, -100%) scale(.8);
     }
 }
 
 /*-----------------*/
 
-.button-container {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-}
-
-.button {
-    display: flex;
-    overflow: hidden;
-    padding: 12px 12px;
+.btn {
+    transition: all 0.3s ease-in-out;
+    font-family: "Dosis", sans-serif;
+  }
+  
+  .btn {
+    width: 150px;
+    height: 60px;
+    border-radius: 50px;
+    background-image: linear-gradient(135deg, #feb692 0%, #ea5455 100%);
+    box-shadow: 0 20px 30px -6px rgba(238, 103, 97, 0.5);
+    outline: none;
     cursor: pointer;
-    user-select: none;
-    transition: all 600ms linear;
-    text-align: center;
-    white-space: nowrap;
-    text-decoration: none !important;
-    text-transform: none;
-    text-transform: capitalize;
-    color: #000000;
-    border: 10 none;
-    border-radius: var(--borderRadius);
-    font-size: 13px;
-    font-weight: 500;
-    line-height: 1.3;
-    
-    -webkit-appearance: none;
-    -moz-appearance: none;
-    appearance: none;
-
-    justify-content: center;
-    align-items: center;
-    flex: 0 0 160px;
-
-    box-shadow: 2px 5px 10px var(--color-smoke);
-
-    &:hover {
-        transition: all 150ms linear;
-
-        opacity: .85;
-    }
-
-    &:active {
-        transition: all 150ms linear;
-        opacity: .75;
-    }
-
-    &:focus {
-        outline: 1px dotted #959595;
-        outline-offset: -4px;
-    }
-}
-
-.button.-regular {
-    color: #202129;
-    background-color: #f2f2f2;
-
-    &:hover {
-        color: #202129;
-        background-color: #e1e2e2;
-        opacity: 1;
-    }
-
-    &:active {
-        background-color: #d5d6d6;
-        opacity: 1;
-    }
-}
+    border: none;
+    font-size: 24px;
+    color: white;
+  }
+  
+  .btn:hover {
+    transform: translateY(3px);
+    box-shadow: none;
+  }
+  
+  .btn:active {
+    opacity: 0.5;
+  }
