--- a/assets/style/styleContacto.css
+++ b/assets/style/styleContacto.css
@@ -3,7 +3,7 @@ body {
     align-items: center;
     justify-content: center;
     height: 80vh;
-    background-image: url('/assets/resources/img/FondoContacto.jpg');
+    background-image: url('../resources/img/FondoContacto.jpg');
     background-size: cover;
     font-family: 'Nunito', sans-serif;
     margin-top: 80px;
@@ -43,9 +43,7 @@ header li a {
 }
 
 .contenedor-contact {
-    margin-top: 400px;
-    margin-bottom: 30px;
-
+    margin-top: 600px;
 }
 
 .card {
